# finam-core

./: .env  .env.save  .gitignore  .gitmodules  README.1.4.MD  README_v1.0_event_core_GITHUB.md  conftest.py  finam_client.py  main.py  pyproject.toml  pytest.ini  readme_private.md  requirements.txt  test_auth_clean.py  test_full_pipeline.py
accounting/: portfolio_manager.py  position_manager.py
ai/: inference_engine.py  ml_strategy.py  model_loader.py
analytics/: equity_tracker.py  metrics.py  trade_log.py
app/: main.py
config/: settings.py
core/: engine.py  event_bus.py  events.py  orchestrator.py  result.py  validator.py
data/: asset_metadata.py  finam_history_client.py  history_loader.py  market_data.py  snapshot.json  test_snapshot.json
domain/: events.py  fill_event.py  order_execution.py  pipeline_result.py  position_manager.py  risk_decision.py  signal_intent.py
execution/: execution_engine.py  finam_execution_engine.py  oms.py  order.py  order_events.py  order_manager.py  order_model.py  sim_execution_engine.py  sim_executor.py  slippage_model.py  trading_engine.py
finam_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
market/: sim_feed.py
migrations/: 001_event_store_schema.sql  002_snapshot_schema.sql
portfolio/: portfolio.py
research/: backtest.py  dataset_builder.py  label_engine.py  train_baseline.py  walk_forward.py
risk/: DrawdownRule.py  MaxGrossExposureRule.py  MaxPositionPctRule.py  __init__.py  base_rule.py  context.py  contract_adapter.py  models.py  position_cap.py  position_sizer.py  pre_trade_risk.py  (+8 more)
(+139 files in other folders)
